--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Black Jack</title>
     <link rel="stylesheet" type="text/css" href="index.css"/>
-    <script src="index.js"></script>
+   
   </head>
   <body>
     <div>
@@ -24,7 +24,7 @@
     <div>
       <h2>Players</h2>
     </div>
-    <div class="rootPlayers">
+    <div id="rootPlayers">
       <!-- <ul class="players"> -->
         <!-- <li class="player"> Player1</li>
         <li class="player"> Player2</li>
@@ -32,5 +32,6 @@
         <li class="player">Player4</li> -->
       </ul>
     </div>
+    <script src="index.js" defer></script>
   </body>
 </html>
